--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-        <h1>Welcome to My Web Page</h1>
+        <h1>Welcome to My Web Page Branch</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -35,4 +37,5 @@
         <p>&copy; 2025 My Web Page</p>
     </footer>
 </body>
+
 </html>
