--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Welcome to My Web Page Branch</h1>
+        <h1>Welcome to My Web Page Branch 3</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
