--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Welcome to Sheesh</h1>
+        <h1>Sand From Cisco</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
